--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ DB_PASSWORD=
 DB_NAME=
 DB_PORT=
 SESSION_SECRET=
+
+# Google reCAPTCHA v2
+# Get your keys from: https://www.google.com/recaptcha/admin
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=your_site_key_here
+RECAPTCHA_SECRET_KEY=your_secret_key_here
