--- a/package.json
+++ b/package.json
@@ -3,27 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
-    "ws:dev": "node websocket-server.js"
+    "iot": "node iot-server.js"
   },
   "dependencies": {
     "@types/react-google-recaptcha": "^2.1.9",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "mysql2": "^3.11.5",
     "next": "16.0.6",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "19.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "serialport": "^12.0.0",
+    "uuid": "^9.0.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@serialport/parser-readline": "^12.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^9.0.7",
     "@types/ws": "^8.18.1",
     "tailwindcss": "^4",
     "typescript": "^5"
