--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start",
-    "iot": "node iot-server.js"
+    "iot": "node server/iot-server.js"
   },
   "dependencies": {
     "@types/react-google-recaptcha": "^2.1.9",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "mysql2": "^3.11.5",
     "next": "16.0.6",
